[package]
name = "cymbal"
version = "0.1.0"
authors = [
    "Daniel Franklin <daniel@danielzfranklin.org>",
    "Headcrab Contributors"
]
description = "The symbolication portion of headcrab, refactored into a standalone library"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gimli = "0.22.0"
addr2line = "0.13.0"
object = "0.20.0"
capstone = "0.7.0"
memmap = "0.7.0"
eyre = "0.6.5"

[dev-dependencies]
duct = "0.13.5"
insta = "1.7.1"
